[tool.poetry]
name = "gitbugs-java"
version = "0.1.0"
description = "A Reproducible Java Benchmark of Recent Bugs"
authors = ["André Silva <andreans@kth.se>", "Nuno Saavedra <nuno.saavedra@tecnico.ulisboa.pt>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pygithub = "^2.1.1"
pygit2 = "^1.13.3"
docker = "^6.1.3"
unidiff = "^0.7.5"
tqdm = "^4.66.1"
fire = "^0.5.0"


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
