[tool.poetry]
name = "gitbug-java"
version = "1.0.0"
description = "A Reproducible Java Benchmark of Recent Bugs"
authors = ["André Silva <andreans@kth.se>", "Nuno Saavedra <nuno.saavedra@tecnico.ulisboa.pt>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pygithub = "^2.3.0"
pygit2 = "^1.12.1"
docker = "^7.1.0"
unidiff = "^0.7.5"
tqdm = "^4.65.0"
fire = "^0.7.0"
junitparser = "^3.1.0"
pyyaml = "^6.0.1"
gitbugactions = "^3.1.0"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
